--- a/css/notice-listing.css
+++ b/css/notice-listing.css
@@ -575,3 +575,65 @@ body.is--grid-view
 .at-rest-publish-filter .choices__list--dropdown .choices__item::before {
     display: none !important;
 }
+
+/* Death Notice Create Listing */
+body:not(.is--grid-view)
+    .breakdance
+    .at-rest-death-notice-listing[data-type='create']
+    .funeral-homes-table__row.has-addresses
+    .funeral-homes-table__cell:not(.actions) {
+    flex-direction: column;
+    align-items: baseline;
+}
+.breakdance
+    .breakdance
+    .at-rest-death-notice-listing[data-type='create']
+    .funeral-homes-table__cell:not(:last-child) {
+    text-align: left !important;
+    justify-content: flex-start !important;
+}
+.breakdance
+    .at-rest-death-notice-listing[data-type='create']
+    .funeral-homes-table__cell:nth-child(1) {
+    width: 4%;
+}
+.breakdance
+    .at-rest-death-notice-listing[data-type='create']
+    .funeral-homes-table__cell:nth-child(2) {
+    width: 25%;
+}
+.breakdance
+    .at-rest-death-notice-listing[data-type='create']
+    .funeral-homes-table__cell:nth-child(3) {
+    width: 13%;
+}
+.breakdance
+    .at-rest-death-notice-listing[data-type='create']
+    .funeral-homes-table__cell:nth-child(4) {
+    width: 13%;
+}
+.breakdance
+    .at-rest-death-notice-listing[data-type='create']
+    .funeral-homes-table__cell:nth-child(5) {
+    width: 7%;
+    justify-content: center !important;
+    text-align: center !important;
+}
+.breakdance
+    .at-rest-death-notice-listing[data-type='create']
+    .funeral-homes-table__cell:nth-child(6) {
+    width: 18%;
+}
+.breakdance
+    .at-rest-death-notice-listing[data-type='create']
+    .funeral-homes-table__cell:nth-child(7) {
+    width: 10%;
+    white-space: nowrap;
+}
+.breakdance
+    .at-rest-death-notice-listing[data-type='create']
+    .funeral-homes-table__cell:nth-child(8) {
+    width: 13%;
+    text-align: right !important;
+    justify-content: flex-end !important;
+}
