--- a/css/notice-listing.css
+++ b/css/notice-listing.css
@@ -471,11 +471,6 @@ body.is--grid-view
         color: #858b96 !important;
     }
 }
-.breakdance
-    .loop-table[data-post-type='family-notices']
-    .funeral-homes-table__cell {
-    width: 22% !important;
-}
 
 /* Type Filter */
 .at-rest-type-filter-family-notices {
@@ -665,4 +660,240 @@ body:not(.is--grid-view)
 }
 .at-rest-publish-status-filter .choices__list--dropdown .choices__item::before {
     display: none !important;
+}
+
+/* Family Notice Create Listing */
+
+.at-rest-family-notice-create-listing
+    .funeral-homes-table__cell:not(:last-child) {
+    text-align: left !important;
+    justify-content: flex-start !important;
+}
+.breakdance
+    .at-rest-family-notice-create-listing
+    .funeral-homes-table__cell:nth-child(1) {
+    width: 4%;
+}
+.breakdance
+    .at-rest-family-notice-create-listing
+    .funeral-homes-table__cell:nth-child(2) {
+    width: 19%;
+}
+.breakdance
+    .at-rest-family-notice-create-listing
+    .funeral-homes-table__cell:nth-child(3) {
+    width: 10.5%;
+}
+.breakdance
+    .at-rest-family-notice-create-listing
+    .funeral-homes-table__cell:nth-child(4) {
+    width: 10.5%;
+}
+.breakdance
+    .at-rest-family-notice-create-listing
+    .funeral-homes-table__cell:nth-child(5) {
+    width: 8%;
+    text-align: center !important;
+}
+.breakdance
+    .at-rest-family-notice-create-listing
+    .funeral-homes-table__cell:nth-child(6) {
+    width: 10%;
+}
+.breakdance
+    .at-rest-family-notice-create-listing
+    .funeral-homes-table__cell:nth-child(7) {
+    width: 15%;
+    white-space: nowrap;
+}
+.breakdance
+    .at-rest-family-notice-create-listing
+    .funeral-homes-table__cell:nth-child(8) {
+    width: 10%;
+}
+.breakdance
+    .at-rest-family-notice-create-listing
+    .funeral-homes-table__cell:nth-child(9) {
+    width: 13%;
+    text-align: right !important;
+    justify-content: flex-end !important;
+}
+
+.breakdance
+    .at-rest-family-notice-create-listing
+    .funeral-homes-table__toggle-extra {
+    left: 0;
+    right: auto;
+}
+.breakdance
+    .at-rest-family-notice-create-listing
+    .death-notice__status.status--publish {
+    background: none;
+    cursor: default;
+    padding: 0rem;
+}
+
+.breakdance
+    .at-rest-family-notice-create-listing
+    .death-notice__status.status--publish {
+    background: none;
+    cursor: default;
+    padding: 0rem;
+}
+
+body:not(.is--grid-view)
+    .at-rest-family-notice-create-listing
+    .funeral-homes-table__row:nth-child(2n) {
+    background: #fafafa;
+}
+
+body:not(.is--grid-view)
+    .at-rest-family-notice-create-listing
+    .funeral-homes-table__row.has-addresses
+    .funeral-homes-table__cell:not(.actions) {
+    flex-direction: column;
+    align-items: baseline;
+}
+
+body:not(.is--grid-view)
+    .at-rest-family-notice-create-listing
+    .funeral-homes-table__row.has-addresses
+    .funeral-homes-table__cell:nth-child(4) {
+    padding: 1rem 0;
+}
+
+body:not(.is--grid-view)
+    .at-rest-family-notice-create-listing
+    .funeral-homes-table__row.has-addresses
+    .funeral-homes-table__cell
+    .list-item:not(:first-child) {
+    padding-top: 8px;
+}
+
+body:not(.is--grid-view)
+    .at-rest-family-notice-create-listing
+    .funeral-homes-table__row.has-addresses
+    .funeral-homes-table__cell:nth-child(4) {
+    padding: 1rem 0;
+}
+
+body:not(.is--grid-view)
+    .at-rest-family-notice-create-listing
+    .funeral-homes-table__row.has-addresses
+    .funeral-homes-table__cell
+    .list-item:not(:first-child) {
+    padding-top: 8px;
+}
+
+body:not(.is--grid-view)
+    .at-rest-family-notice-create-listing
+    .funeral-homes-table__row
+    .funeral-homes-table__cell
+    .status {
+    display: none;
+}
+
+/* Post Status Filter */
+.at-rest-post-status-filter {
+    display: flex;
+    flex-flow: row nowrap;
+    gap: 1rem;
+}
+.at-rest-post-status-filter .choices__inner {
+    min-width: 14.5rem;
+}
+
+.at-rest-post-status-filter
+    .choices__list--dropdown
+    .choices__list
+    .choices__item {
+    padding-left: 3rem !important;
+    background-color: transparent !important;
+    background-image: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='0.5' y='0.5' width='19' height='19' rx='3.5' fill='white' stroke='%23AEAEAE'/%3E%3C/svg%3E%0A") !important;
+    background-position: 0.75rem 50%;
+    background-size: 1.25rem;
+    background-repeat: no-repeat;
+}
+.at-rest-post-status-filter
+    .choices__list--dropdown
+    .choices__item.is-selected {
+    background-image: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='0.5' y='0.5' width='19' height='19' rx='3.5' fill='%23802F36'/%3E%3Crect x='0.5' y='0.5' width='19' height='19' rx='3.5' stroke='%23802F36'/%3E%3Cg clip-path='url(%23clip0_506_8441)'%3E%3Crect x='2' y='2' width='16' height='16' rx='2' fill='%23802F36'/%3E%3Cpath d='M5 10.5L9 14.5L15 5.5' stroke='white' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_506_8441'%3E%3Crect width='16' height='16' fill='white' transform='translate(2 2)'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A") !important;
+}
+.at-rest-post-status-filter .choices__list--dropdown .choices__item::before {
+    display: none !important;
+}
+
+/* Statistic Search */
+.breakdance .at-rest-statistic-search-form.form {
+    display: flex;
+    text-align: left;
+}
+
+.at-rest-notices-statistic-listing h2 {
+    margin: 0 0 3.75rem;
+    font-size: var(--preset-id-bedf4b3e-549b-463f-9b61-1695063ced82-font-size);
+    font-weight: var(
+        --preset-id-bedf4b3e-549b-463f-9b61-1695063ced82-font-weight
+    );
+    line-height: var(
+        --preset-id-bedf4b3e-549b-463f-9b61-1695063ced82-line-height
+    );
+}
+.breakdance
+    .at-rest-notices-statistic-listing.loop-table
+    .funeral-homes-table__cell:nth-child(1) {
+    width: 50%;
+}
+.breakdance
+    .at-rest-notices-statistic-listing.loop-table
+    .funeral-homes-table__cell:nth-child(2) {
+    width: 20%;
+}
+.breakdance
+    .at-rest-notices-statistic-listing.loop-table
+    .funeral-homes-table__cell:nth-child(3),
+.breakdance
+    .at-rest-notices-statistic-listing.loop-table
+    .funeral-homes-table__cell:nth-child(4) {
+    width: 15%;
+    text-align: left;
+    justify-content: flex-start;
+}
+
+/* Death Notice Photo Condolences Listing */
+.breakdance
+    .at-rest-death-notice-photo-condolences-listing.loop-table
+    .funeral-homes-table__cell:nth-child(1) {
+    width: 20%;
+}
+.breakdance
+    .at-rest-death-notice-photo-condolences-listing.loop-table
+    .funeral-homes-table__cell:nth-child(2) {
+    width: 12.5%;
+}
+.breakdance
+    .at-rest-death-notice-photo-condolences-listing.loop-table
+    .funeral-homes-table__cell:nth-child(3) {
+    width: 16.5%;
+    white-space: nowrap !important;
+}
+.breakdance
+    .at-rest-death-notice-photo-condolences-listing.loop-table
+    .funeral-homes-table__cell:nth-child(4) {
+    width: 18.5%;
+    justify-content: center;
+    padding: 1rem;
+}
+.breakdance
+    .at-rest-death-notice-photo-condolences-listing.loop-table
+    .funeral-homes-table__cell:nth-child(5) {
+    width: 10%;
+    justify-content: center;
+    padding: 1rem;
+    white-space: nowrap;
+}
+.breakdance
+    .at-rest-death-notice-photo-condolences-listing.loop-table
+    .funeral-homes-table__cell:nth-child(6) {
+    width: 22.5%;
 }
