--- a/css/notice-listing.css
+++ b/css/notice-listing.css
@@ -76,6 +76,33 @@
     }
 }
 
+/* Spinner */
+
+.is--table-preloader{
+    position: absolute;
+    z-index: 99999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(0, 0, 0, .5);
+    transition: var(--transition);
+    opacity: 0;
+    visibility: hidden;
+}
+
+.is--table-preloader.visible{
+        opacity: 1;
+    visibility: visible;
+}
+
+.is--table-preloader svg {
+    animation: rotate 1.2s linear infinite;
+}
+
 /* View Select */
 
 .at-rest-view-select .view-grid {
