--- a/css/notice-listing.css
+++ b/css/notice-listing.css
@@ -4,15 +4,29 @@
     gap: 1rem;
 }
 
-.breakdance .loop-table .is--pagination button.pagination-btn[data-action="last"] svg, .breakdance .loop-table .is--pagination button.pagination-btn[data-action="next"] svg {
+.breakdance
+    .loop-table
+    .is--pagination
+    button.pagination-btn[data-action='last']
+    svg,
+.breakdance
+    .loop-table
+    .is--pagination
+    button.pagination-btn[data-action='next']
+    svg {
     transform: scale(-1, 1);
 }
 
-.breakdance .loop-table .is--pagination button.pagination-btn:hover:not(:disabled) svg path {
-    stroke: #802F36;
+.breakdance
+    .loop-table
+    .is--pagination
+    button.pagination-btn:hover:not(:disabled)
+    svg
+    path {
+    stroke: #802f36;
 }
 
-.breakdance .loop-table .is--pagination button.pagination-btn{
+.breakdance .loop-table .is--pagination button.pagination-btn {
     border: none;
 }
 
@@ -20,11 +34,16 @@
     cursor: default;
 }
 
-.breakdance .loop-table .is--pagination button.pagination-btn[disabled] svg path{
-    stroke: #AEAEAE;
+.breakdance
+    .loop-table
+    .is--pagination
+    button.pagination-btn[disabled]
+    svg
+    path {
+    stroke: #aeaeae;
 }
 
-.breakdance .loop-table .is--pagination button.pagination-btn svg path{
+.breakdance .loop-table .is--pagination button.pagination-btn svg path {
     stroke: #353945;
 }
 
@@ -78,7 +97,7 @@
 
 /* Spinner */
 
-.is--table-preloader{
+.is--table-preloader {
     position: absolute;
     z-index: 99999;
     left: 0;
@@ -88,14 +107,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: rgba(0, 0, 0, .5);
+    background: rgba(0, 0, 0, 0.5);
     transition: var(--transition);
     opacity: 0;
+    border-radius: 15px;
     visibility: hidden;
 }
 
-.is--table-preloader.visible{
-        opacity: 1;
+.is--table-preloader.visible {
+    opacity: 1;
     visibility: visible;
 }
 
@@ -153,9 +173,9 @@ body.is--grid-view
     display: none;
 }
 
-.breakdance .loop-table .funeral-homes-table__row .funeral-homes-table__cell{
-        transition: none;
-    }
+.breakdance .loop-table .funeral-homes-table__row .funeral-homes-table__cell {
+    transition: none;
+}
 
 div[data-post-type='family-notices']
     .funeral-homes-table__cell:not(:last-child) {
@@ -216,7 +236,8 @@ div[data-post-type='family-notices'] .death-notice__status.status--publish {
 
 body:not(.is--grid-view)
     div[data-post-type='family-notices']
-    .funeral-homes-table__row:nth-child(2n), body:not(.is--grid-view)
+    .funeral-homes-table__row:nth-child(2n),
+body:not(.is--grid-view)
     div[data-post-type='death-notices']
     .funeral-homes-table__row:nth-child(2n) {
     background: #fafafa;
@@ -281,15 +302,16 @@ body.is--grid-view
 
 body.is--grid-view
     .loop-table
-    .family-notices-table .funeral-homes-table__cell.is--type{
-        padding: 4px 10px;
-        flex-direction: column;
-        justify-content: center;
-        background: #F5F5F5;
-        border-bottom: 1px solid #D9D9D9;
-        border-top-left-radius: 0.75rem;
-        border-top-right-radius: 0.75rem;
-    }
+    .family-notices-table
+    .funeral-homes-table__cell.is--type {
+    padding: 4px 10px;
+    flex-direction: column;
+    justify-content: center;
+    background: #f5f5f5;
+    border-bottom: 1px solid #d9d9d9;
+    border-top-left-radius: 0.75rem;
+    border-top-right-radius: 0.75rem;
+}
 
 div[data-post-type='family-notices']
     .funeral-homes-table__row
@@ -339,63 +361,82 @@ div[data-post-type='family-notices']
     padding: 4px 8px;
 }
 
-
-
-body.is--grid-view .loop-table:not([data-post-type="death-notices"]) .funeral-homes-table__row:not(.has-extra-addresses), body.is--grid-view .loop-table:not([data-post-type="death-notices"]) .funeral-homes-table__row--inner{
-    padding: 0!important;
+body.is--grid-view
+    .loop-table:not([data-post-type='death-notices'])
+    .funeral-homes-table__row:not(.has-extra-addresses),
+body.is--grid-view
+    .loop-table:not([data-post-type='death-notices'])
+    .funeral-homes-table__row--inner {
+    padding: 0 !important;
 }
 
 body:not(.is--grid-view)
     .breakdance
-    .at-rest-death-notice-listing[data-post-type="death-notices"]
+    .at-rest-death-notice-listing[data-post-type='death-notices']
     .funeral-homes-table__row.has-addresses
     .funeral-homes-table__cell:not(.actions) {
     flex-direction: column;
     align-items: baseline;
 }
 
-body.is--list-view .loop-table[data-post-type="death-notices"] .funeral-homes-table__cell {
+body.is--list-view
+    .loop-table[data-post-type='death-notices']
+    .funeral-homes-table__cell {
     text-align: left !important;
     justify-content: flex-start !important;
 }
 
-body.is--grid-view .loop-table[data-post-type="family-notices"] .funeral-homes-table__cell.death-notice__link{
-    padding: 1rem!important;
+body.is--grid-view
+    .loop-table[data-post-type='family-notices']
+    .funeral-homes-table__cell.death-notice__link {
+    padding: 1rem !important;
 }
 
-body.is--grid-view .loop-table[data-post-type="family-notices"] .funeral-homes-table__row .funeral-homes-table__cell.is--type span {
+body.is--grid-view
+    .loop-table[data-post-type='family-notices']
+    .funeral-homes-table__row
+    .funeral-homes-table__cell.is--type
+    span {
     font-size: 18px;
-    color: #858B96;
+    color: #858b96;
 }
 
-body.is--grid-view .loop-table[data-post-type="family-notices"] .funeral-homes-table__cell.is--residence{
+body.is--grid-view
+    .loop-table[data-post-type='family-notices']
+    .funeral-homes-table__cell.is--residence {
     order: 2;
 }
 
-
-body.is--grid-view .loop-table[data-post-type="death-notices"] .funeral-homes-table__cell:nth-child(4) {
+body.is--grid-view
+    .loop-table[data-post-type='death-notices']
+    .funeral-homes-table__cell:nth-child(4) {
     justify-content: flex-start;
 }
 
-body.is--list-view .loop-table[data-post-type="death-notices"] .funeral-homes-table__cell:nth-child(1){
+body.is--list-view
+    .loop-table[data-post-type='death-notices']
+    .funeral-homes-table__cell:nth-child(1) {
     width: 38%;
 }
 
-body.is--list-view .loop-table[data-post-type="death-notices"] .funeral-homes-table__cell:nth-child(2){
+body.is--list-view
+    .loop-table[data-post-type='death-notices']
+    .funeral-homes-table__cell:nth-child(2) {
     width: 22%;
 }
 
-body.is--list-view .loop-table[data-post-type="death-notices"] .funeral-homes-table__cell:nth-child(3){
+body.is--list-view
+    .loop-table[data-post-type='death-notices']
+    .funeral-homes-table__cell:nth-child(3) {
     width: 21%;
 }
 
-body.is--list-view .loop-table[data-post-type="death-notices"] .funeral-homes-table__cell:nth-child(4){
+body.is--list-view
+    .loop-table[data-post-type='death-notices']
+    .funeral-homes-table__cell:nth-child(4) {
     width: 19%;
-	padding: 1rem;
+    padding: 1rem;
 }
-
-
-
 
 body.is--grid-view
     div[data-post-type='family-notices']
@@ -516,7 +557,6 @@ body.is--grid-view
         color: #858b96 !important;
     }
 }
-
 
 /* Type Filter */
 .at-rest-type-filter-family-notices {
@@ -960,4 +1000,68 @@ body:not(.is--grid-view)
 .tippy-box[data-theme~='custom-dark'][data-placement^='right']
     > .tippy-arrow::before {
     border-right-color: #353945 !important;
+}
+
+/* Death Notice In Family Listing */
+.at-rest-death-notice-listing-in-family {
+    position: relative;
+    display: none;
+}
+.at-rest-death-notice-listing-in-family .funeral-homes-table__cell {
+    text-align: left !important;
+    justify-content: flex-start !important;
+}
+.breakdance
+    .at-rest-death-notice-listing-in-family.loop-table
+    .funeral-homes-table__cell:nth-child(1) {
+    width: 29%;
+}
+.at-rest-death-notice-listing-in-family .funeral-homes-table__cell:nth-child(2),
+.at-rest-death-notice-listing-in-family
+    .funeral-homes-table__cell:nth-child(3) {
+    width: 16%;
+}
+.at-rest-death-notice-listing-in-family
+    .funeral-homes-table__cell:nth-child(4) {
+    width: 13%;
+}
+.at-rest-death-notice-listing-in-family
+    .funeral-homes-table__cell:nth-child(5) {
+    width: 26%;
+    gap: 0.5rem;
+}
+.at-rest-death-notice-listing-in-family
+    .funeral-homes-table__cell:nth-child(5)
+    .button-atom {
+    min-height: 2.75rem;
+    padding: 0 1.6875rem;
+}
+
+body:not(.is--grid-view)
+    .at-rest-death-notice-listing-in-family
+    .funeral-homes-table__row:nth-child(2n) {
+    background: #fafafa;
+}
+
+body:not(.is--grid-view)
+    .at-rest-death-notice-listing-in-family
+    .funeral-homes-table__row.has-addresses
+    .funeral-homes-table__cell:not(.is--actions) {
+    flex-direction: column;
+    align-items: baseline;
+}
+
+body:not(.is--grid-view)
+    .at-rest-death-notice-listing-in-family
+    .funeral-homes-table__row.has-addresses
+    .funeral-homes-table__cell:nth-child(4) {
+    padding: 1rem 0;
+}
+
+body:not(.is--grid-view)
+    .at-rest-death-notice-listing-in-family
+    .funeral-homes-table__row.has-addresses
+    .funeral-homes-table__cell
+    .list-item:not(:first-child) {
+    padding-top: 8px;
 }
